Color Section Styling

--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Style Guide</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>My Website Style Guide</h1>
-    <section>
-      <h2>Colors</h2>
-      <div class="color-box primary-color">
-        <h4>Primary Color</h4>
-        <p>#2d5dcc</p>
-      </div>
-      <div class="color-box secondary-color">
-        <h4>Secondary Color</h4>
-        <p>#d957d9</p>
-      </div>
-      <div class="color-box button-color">
-        <h4>Buttons Color</h4>
-        <p>#4fe0b0</p>
-      </div>
-      <div class="color-box bg-color">
-        <h4>Background Color</h4>
-        <p>#efd9ca</p>
-      </div>
-    </section>
+    <main>
+      <h1>My Website Style Guide</h1>
+      <section>
+        <h2>Colors</h2>
+        <div class="color-container">
+          <div class="color-box primary-color">
+            <h4>Primary Color</h4>
+            <p>#2d5dcc</p>
+          </div>
+          <div class="color-box secondary-color">
+            <h4>Secondary Color</h4>
+            <p>#d957d9</p>
+          </div>
+          <div class="color-box button-color">
+            <h4>Button Color</h4>
+            <p>#4fe0b0</p>
+          </div>
+          <div class="color-box bg-color">
+            <h4>Background Color</h4>
+            <p>#efd9ca</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
