Fonts section markup and styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Basic Style Guide</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -34,6 +34,32 @@
           <div class="color-box bg-color">
             <h4>Background Color</h4>
             <p>#efd9ca</p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2>Fonts</h2>
+        <div class="font-container">
+          <div class="font-box source-code">
+            <h4>Source Code Pro</h4>
+            <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+          </div>
+
+          <div class="font-box nunito-sans">
+            <h4>Nunito Sans</h4>
+            <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+          </div>
+
+          <div class="font-box poppins">
+            <h4>Poppins</h4>
+            <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic">The quick brown fox jumps over the lazy dog.</p>
           </div>
         </div>
       </section>
