--- a/index.html
+++ b/index.html
@@ -63,6 +63,38 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <h2>Text Styles</h2>
+        <div class="text-container">
+          <div class="text-box">
+            <h1>H1: Main page heading</h1>
+            <ul>
+              <li>Font-weight: 700 (bold)</li>
+              <li>Font-size: 26px</li>
+              <li>Font-family: Nunito Sans</li>
+            </ul>
+          </div>
+
+          <div class="text-box">
+            <h2>H2: Subheading</h2>
+            <ul>
+              <li>Font-weight: 500</li>
+              <li>Font-size: 18px</li>
+              <li>Font-family: Poppins</li>
+            </ul>
+          </div>
+
+          <div class="text-box">
+            <p>P: Paragraph text</p>
+            <ul>
+              <li>Font-weight: 400 (regular)</li>
+              <li>Font-size: 14px</li>
+              <li>Font-family: Poppins</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
